--- a/styles.css
+++ b/styles.css
@@ -1,160 +1,211 @@
+/*
+  Josh's Custom CSS Reset
+  https://www.joshwcomeau.com/css/custom-css-reset/
+*/
 *, *::before, *::after {
     box-sizing: border-box;
-}
-
-* {
+  }
+  
+  * {
     margin: 0;
-}
-
-html, body {
+  }
+  
+  html, body {
     height: 100%;
-}
-
-body {
+  }
+  
+  body {
     line-height: 1.5;
-}
-
-body {
     -webkit-font-smoothing: antialiased;
-}
+  }
+  
+  img, picture, video, canvas, svg {
+    display: block;
+    max-width: 100%;
+  }
+  
+  p, h1, h2, h3, h4, h5, h6 {
+    overflow-wrap: break-word;
+  }
+    
+    /*
+    CSS Reset ends
+  */
 
 body {
-    background-color: hsl(30, 38%, 92%);
     display: grid;
     place-content: center;
-    margin: auto;
+    padding: 1.25rem;
+    background-color: hsl(30, 38%, 92%);
 }
 
 .card {
     width: 100%;
-    max-width: 610px;
+    height: auto;
+    max-width: 38.125rem;
     display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     overflow: hidden;
-    border-radius: 0.94rem;
+    border-radius: 0.625rem;
+    box-shadow:
+        2.8px 2.8px 2.2px rgba(0, 0, 0, 0.008),
+        6.7px 6.7px 5.3px rgba(0, 0, 0, 0.012),
+        12.5px 12.5px 10px rgba(0, 0, 0, 0.015),
+        22.3px 22.3px 17.9px rgba(0, 0, 0, 0.018),
+        41.8px 41.8px 33.4px rgba(0, 0, 0, 0.022),
+        100px 100px 80px rgba(0, 0, 0, 0.03);
+    animation: entrance 1s ease-in;
 }
 
 .right {
-    width: 100%;
-    max-width: 305px;
-    height: auto;
+    width: 50%;
+    background-color: red;
+}
+
+@media screen and (min-width: 43.75rem){
+    .right {
+        height: 100%;
+    }
 }
 
 img, picture {
-    display: block;
-    max-width: 100%;
+    width: 100%;
+    height: 100%;
 }
 
 .left {
-    background-color: white;
     display: flex;
     flex-direction: column;
-    gap: 5%;
-    width: 100%;
-    max-width: 305px;
-    height: 100%;
+    gap: 1.25rem;
+    width: 50%;    
     padding: 2.5rem;
+    background-color: hsl(0, 0%, 100%);
 }
 
 .firstp {
     font-family: 'montserrat', sans-serif;
-    font-size: 14px;
-    letter-spacing: 0.31rem;
-    color: hsl(158, 36%, 37%);
-}
-
-.txth1 {
-    font-family: 'fraunces', sans-serif;
-    font-size: 22px;
-    line-height: 1;
-    margin-bottom: 5px;
-}
-
-.txtp {
-    font-family: 'montserrat', sans-serif;
+    font-size: 0.875rem;
     color: hsl(228, 12%, 48%);
 }
 
+h1 {
+    font-family: 'fraunces', sans-serif;
+    font-size: 2rem;
+    line-height: 1;
+    color: hsl(212, 21%, 14%);
+}
+
 .txt-body {
-    font-size: 14px;
-    margin-bottom: 5px;
+    font-family: 'montserrat', sans-serif;
+    font-size: 0.875rem;
+    color: hsl(228, 12%, 48%);
 }
 
 .price {
     display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
     align-items: center;
     column-gap: 10%;
 }
 
-.price>p {
+.price-tag {
     font-family: 'fraunces', sans-serif;
-    font-size: 30px;
+    font-size: 2rem;
     color: hsl(158, 36%, 37%);
 }
 
-strike {
+s {
+    justify-self: flex-start;
     font-family: 'montserrat', sans-serif;
     color: hsl(228, 12%, 48%);
-    font-size: 14px;
+    font-size: 0.875rem;
 }
 
 button {
     background-color: hsl(158, 36%, 37%);
     border: none;
     width: 100%;
-    border-radius: 10px;
-    padding: 15px 1.88rem;
+    border-radius: 0.5rem;
+    padding: 1rem 2rem;
     display: flex;
     justify-content: center;
     align-items: center;
     column-gap: 1rem;
-    color: white;
-    font-size: 14px;
+    color: hsl(0, 0%, 100%);
+    font-size: 1rem;
     font-family: 'montserrat', sans-serif;
     font-weight: 500;
 }
 
 .cart-icon {
-    width: 18px;
+    width: 1rem;
+    animation: move-icon 1s 1.5s infinite;
 }
 
-button:hover {
-    background-color: hsl(158, 36%, 20%);
-    cursor: pointer;
-}
+@media screen and (max-width: 43.75rem) {
 
-@media screen and (max-width: 700px) {
     .card {
-        flex-wrap: wrap;
-        width: 100%;
-        max-width: 365px;
-        height: auto;
-        border-radius: 0.5rem;
+        max-width: 22.8125rem;
     }
 
     .right {
         width: 100%;
-        max-width: 365px;
     }
 
     .left {
         width: 100%;
-        max-width: 365px;
-        height: auto;
-        padding: 26px;
-        gap: 10px;
+        padding: 2rem;
+        gap: 0.625rem;
     }
 
-    .txt-body {
-        font-size: 15px;
+}
+
+@media (hover: hover) {
+
+    button:hover {
+        background-color: hsl(158, 36%, 20%);
+        transition: background-color 1s linear;
     }
 
-    .price {
-        column-gap: 25px;
+    button:hover .cart-icon {
+        animation: none;     
+    }
+}
+
+@keyframes entrance {
+    0% {
+        opacity: 0;
+        transform: scale(0);
     }
 
-    .price>p {
-        font-size: 35px;
+    100% {
+        opacity: 1;
+        transform: scale(1);
+    }
+}
+
+@keyframes move-icon {
+    0% {
+        transform: translateY(-5px) rotate(-20deg);
+    }
+
+    15% {
+        transform: translateY(-5px) rotate(20deg);
+    }
+
+    20% {
+        transform: translateY(-5px) rotate(-20deg);
+    }
+
+    30% {
+        transform: translateY(-5px) rotate(0deg);
+    }
+
+    40% {
+        transform: rotate(0deg);
     }
 }
