--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,18 @@
     CSS Reset ends
   */
 
+  .sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0,0,0,0);
+    white-space: nowrap;
+    border-width: 0;
+  }
+
 body {
     display: grid;
     place-content: center;
@@ -73,6 +85,7 @@ body {
 img, picture {
     width: 100%;
     height: 100%;
+    transition: transform 0.5s ease-in-out;
 }
 
 .left {
@@ -81,6 +94,7 @@ img, picture {
     gap: 1.25rem;
     width: 50%;    
     padding: 2.5rem;
+    z-index: 1;
     background-color: hsl(0, 0%, 100%);
 }
 
@@ -117,7 +131,7 @@ h1 {
     color: hsl(158, 36%, 37%);
 }
 
-s {
+del {
     justify-self: flex-start;
     font-family: 'montserrat', sans-serif;
     color: hsl(228, 12%, 48%);
@@ -164,6 +178,10 @@ button {
 }
 
 @media (hover: hover) {
+
+    img:hover, picture:hover {
+        transform: scale(1.2);
+    }
 
     button:hover {
         background-color: hsl(158, 36%, 20%);
